# pearls-tech

./: .gitignore  README.md
artificial-intelligence-ml/: README.md  basics-nlp.md  decision-tree-algorithm.md  feature-and-label-ml.md  introduction-ml.md  key-process-ml.md  matplotlib-seaborn.md  neuro-symbolic-ai.md  phenomena-ml.md  regulation-ml.md  scope-feature-eng.md  techlab-matplotlib-seaborn-for-data-visualization.ipynb  type-ml-problems.md  uml-sml-types.md  workflow-ml.md
artificial-intelligence-ml/assets/: feature-type.md
artificial-intelligence-ml/code/decision-tree/: decision-tree.ipynb  requeriments.txt
catetory-theory/: README.md  definitions.md  set-category.md
tools/tensorflow/: core.md  overview.md  toc.md
tools/tensorflow/notebooks/: Basic.ipynb  pyproject.toml
