[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = ""
authors = ["rcastillo <tepuybits@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
tensorflow = "^2.16.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
